tests/ui/unwind-without-proof/expected
error: Please use '#kani[proof]' above the annotation
  --> main.rs:13:1
   |
13 | #[kani::unwind(7)]
   | ^^^^^^^^^^^^^^^^^^
